--- a/FluentVerification.Tests/FluentVerification.Tests.csproj
+++ b/FluentVerification.Tests/FluentVerification.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CD4AE2B5-B4ED-43DB-92AD-5F46FD93F85C}</ProjectGuid>
+    <ProjectGuid>{98493EBB-8E18-4E2E-AE81-2126F3CE564F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FluentVerification</RootNamespace>
-    <AssemblyName>FluentVerification</AssemblyName>
+    <RootNamespace>FluentVerification.Tests</RootNamespace>
+    <AssemblyName>FluentVerification.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -44,11 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Check.cs" />
+    <Compile Include="CheckTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FluentVerification\FluentVerification.csproj">
+      <Project>{CD4AE2B5-B4ED-43DB-92AD-5F46FD93F85C}</Project>
+      <Name>FluentVerification</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
