--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: csharp
-solution: "./FluentVerification/FluentVerification.sln"
+solution: "FluentVerification.sln"
 install:
 - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
 script:
-- xbuild ./FluentVerification/FluentVerification.sln
-- mono ./testrunner/xunit.runners.1.9.2/tools/xunit.console.clr4.exe ./FluentVerification.Tests/bin/Debug/FluentVerification.Tests.dll
+- xbuild FluentVerification.sln
+- mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./FluentVerification.Tests/bin/Debug/FluentVerification.Tests.dll
