--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: csharp
 solution: "FluentVerification.sln"
 install:
-- nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
+- nuget restore FluentVerification.sln -Verbosity detailed
+- nuget install NUnit.Runners -Version 3.6.1 -OutputDirectory testrunner
 script:
 - xbuild FluentVerification.sln
-- mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./FluentVerification.Tests/bin/Debug/FluentVerification.Tests.dll
+- mono ./testrunner/NUnit.ConsoleRunner.3.6.1/tools/nunit3-console.exe ./FluentVerification.Tests/bin/Debug/FluentVerification.Tests.dll
